--- a/apps/cryptfolio/tsconfig.app.json
+++ b/apps/cryptfolio/tsconfig.app.json
@@ -10,6 +10,7 @@
     "**/*.spec.ts"
   ],
   "include": [
-    "**/*.ts"
+    "**/*.ts",
+    "../../libs/cryptfolio/portfolio/src/index.ts"
   ]
 }
