--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,6 +21,9 @@
       ],
       "@projects/cryptfolio/portfolio": [
         "libs/cryptfolio/portfolio/src/index.ts"
+      ],
+      "@projects/cryptfolio/coins": [
+        "libs/cryptfolio/coins/src/index.ts"
       ]
     }
   },
