Added portfolio entries component

--- a/angular.json
+++ b/angular.json
@@ -125,7 +125,7 @@
       "root": "libs/cryptfolio/portfolio",
       "sourceRoot": "libs/cryptfolio/portfolio/src",
       "projectType": "library",
-      "prefix": "projects",
+      "prefix": "pflo",
       "architect": {
         "test": {
           "builder": "@angular-devkit/build-angular:karma",
