--- a/tsconfig.json
+++ b/tsconfig.json
@@ -30,6 +30,9 @@
       ],
       "@projects/shared/local-storage": [
         "libs/shared/local-storage/src/index.ts"
+      ],
+      "@projects/shared/static": [
+        "libs/shared/static/src/index.ts"
       ]
     }
   },
