--- a/angular.json
+++ b/angular.json
@@ -28,9 +28,13 @@
             ],
             "styles": [
               "apps/cryptfolio/src/styles.scss",
-              "./node_modules/@clr/ui/clr-ui.min.css"
+              "./node_modules/@clr/ui/clr-ui.min.css",
+              "./node_modules/@clr/icons/clr-icons.min.css"
             ],
-            "scripts": []
+            "scripts": [
+              "./node_modules/@webcomponents/custom-elements/custom-elements.min.js",
+              "./node_modules/@clr/icons/clr-icons.min.js"
+            ]
           },
           "configurations": {
             "production": {
