--- a/package.json
+++ b/package.json
@@ -27,15 +27,16 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "6.0.1",
-    "@angular/core": "6.0.1",
-    "@angular/compiler": "6.0.1",
     "@angular/animations": "6.0.1",
+    "@angular/common": "6.0.1",
+    "@angular/compiler": "6.0.1",
+    "@angular/core": "6.0.1",
     "@angular/forms": "6.0.1",
     "@angular/platform-browser": "6.0.1",
     "@angular/platform-browser-dynamic": "6.0.1",
     "@angular/router": "6.0.1",
     "@clr/angular": "^0.11.20",
+    "@clr/icons": "^0.11.21",
     "@clr/ui": "^0.11.20",
     "@ngrx/effects": "5.2.0",
     "@ngrx/entity": "5.2.0",
@@ -43,6 +44,7 @@
     "@ngrx/store": "5.2.0",
     "@ngrx/store-devtools": "5.2.0",
     "@nrwl/nx": "6.0.2",
+    "@webcomponents/custom-elements": "^1.1.2",
     "core-js": "^2.5.4",
     "ngrx-store-freeze": "0.2.2",
     "rxjs": "6.0.0",
