--- a/package.json
+++ b/package.json
@@ -27,10 +27,10 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "6.0.1",
     "@angular/common": "6.0.1",
-    "@angular/compiler": "6.0.1",
     "@angular/core": "6.0.1",
+    "@angular/compiler": "6.0.1",
+    "@angular/animations": "6.0.1",
     "@angular/forms": "6.0.1",
     "@angular/platform-browser": "6.0.1",
     "@angular/platform-browser-dynamic": "6.0.1",
@@ -46,6 +46,7 @@
     "@nrwl/nx": "6.0.2",
     "@webcomponents/custom-elements": "^1.1.2",
     "core-js": "^2.5.4",
+    "file-saver": "^1.3.8",
     "ngrx-store-freeze": "0.2.2",
     "rxjs": "6.0.0",
     "rxjs-compat": "6.0.0",
